Fix bug cannot scroll sidebar on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -271,20 +271,21 @@ a {
   padding: 3rem 2.3rem;
   background-color: white;
   z-index: 20; }
-  .sidebar:hover {
-    overflow-y: auto;
-    padding-right: 1.1rem; }
-    .sidebar:hover::-webkit-scrollbar {
-      position: absolute;
-      width: 1.2rem; }
-    .sidebar:hover::-webkit-scrollbar-track {
-      border-radius: 1.2rem;
-      background-color: transparent;
-      -webkit-box-shadow: inset 0 0 0 0.3rem white; }
-    .sidebar:hover::-webkit-scrollbar-thumb {
-      border: 0.3rem solid white;
-      border-radius: 0.6rem;
-      background-color: #D9D9DE; }
+  @media (min-width: 1024px) {
+    .sidebar:hover {
+      overflow-y: auto;
+      padding-right: 1.1rem; }
+      .sidebar:hover::-webkit-scrollbar {
+        position: absolute;
+        width: 1.2rem; }
+      .sidebar:hover::-webkit-scrollbar-track {
+        border-radius: 1.2rem;
+        background-color: transparent;
+        -webkit-box-shadow: inset 0 0 0 0.3rem white; }
+      .sidebar:hover::-webkit-scrollbar-thumb {
+        border: 0.3rem solid white;
+        border-radius: 0.6rem;
+        background-color: #D9D9DE; } }
   @media (max-width: 867px) {
     .sidebar {
       position: absolute;
@@ -292,10 +293,15 @@ a {
       height: 100vh;
       box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
       transition: transform 200ms ease;
-      transform: translateX(-100%); } }
+      transform: translateX(-100%);
+      overflow-y: scroll; } }
+  @media (min-width: 868px) and (max-width: 1023px) {
+    .sidebar {
+      overflow-y: scroll; } }
 
-.sidebar-section__list {
-  cursor: pointer; }
+@media (min-width: 1024px) {
+  .sidebar-section__list {
+    cursor: pointer; } }
 
 .sidebar-section {
   margin-bottom: 2.3rem; }
