--- a/src/styles/modules/_sidebar.scss
+++ b/src/styles/modules/_sidebar.scss
@@ -13,8 +13,10 @@
   z-index: 20;
 
   &:hover {
-    @include scrollable_light_bg;
-    padding-right: 1.1rem;
+    @include desktop {
+      @include scrollable_light_bg;
+      padding-right: 1.1rem;
+    }
   }
 
   @include phone {
@@ -24,9 +26,16 @@
     box-shadow: 0 0 1rem rgba(0,0,0,0.1);
     transition: transform 200ms ease;
     transform: translateX(-100%);
+    overflow-y: scroll;
+  }
+
+  @include tablet {
+    overflow-y: scroll;
   }
 }
 
 .sidebar-section__list {
-  cursor: pointer;
+  @include desktop {
+    cursor: pointer;
+  }
 }
